Adicionando conexão com o DB e FluentAPI para UserModel e MovieModel

--- a/LocaFilms/appsettings.json
+++ b/LocaFilms/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MainConnection": "Data Source=DESKTOP-ST3QLGI\\SQLEXPRESS;database=LocaFilms;Encrypt=False;Trust Server Certificate=True;"
+  },
   "AllowedHosts": "*"
 }
