Corrigindo connection string

--- a/LocaFilms/appsettings.json
+++ b/LocaFilms/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MainConnection": "Data Source=DESKTOP-ST3QLGI\\SQLEXPRESS;database=LocaFilms;Encrypt=False;Trust Server Certificate=True;"
+    "MainConnection": "Data Source=DESKTOP-ST3QLGI\\SQLEXPRESS;database=LocaFilmsDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AllowedHosts": "*"
 }
