Add configurações do JWT

--- a/LocaFilms/appsettings.json
+++ b/LocaFilms/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "MainConnection": "Data Source=DESKTOP-ST3QLGI\\SQLEXPRESS;database=LocaFilmsDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "Issuer": "http://localhost",
+    "Audience": "Audience",
+    "SecurityKey": "BCD7F849-51EE-4C7A-8742-1EBDB72DF58D",
+    "AccessTokenExpiration": 900,
+    "RefreshTokenExpiration": 7200
+  }
 }
