--- a/LocaFilms/appsettings.json
+++ b/LocaFilms/appsettings.json
@@ -12,8 +12,8 @@
   "JwtOptions": {
     "Issuer": "http://localhost",
     "Audience": "Audience",
-    "SecurityKey": "BCD7F849-51EE-4C7A-8742-1EBDB72DF58D",
-    "AccessTokenExpiration": 900,
+    "SecurityKey": "BCD7F849-51EE-4C7A-8742-1EBDB72DF58D-B846FAB9-F16E-4662-BDDD-7FADF0693499",
+    "AccessTokenExpiration": 3600,
     "RefreshTokenExpiration": 7200
   }
 }
