--- a/LocaFilms/appsettings.json
+++ b/LocaFilms/appsettings.json
@@ -15,5 +15,7 @@
     "SecurityKey": "BCD7F849-51EE-4C7A-8742-1EBDB72DF58D-B846FAB9-F16E-4662-BDDD-7FADF0693499",
     "AccessTokenExpiration": 3600,
     "RefreshTokenExpiration": 7200
-  }
+  },
+  "ADMIN_EMAIL": "levisonjr21@gmail.com",
+  "ADMIN_PASSWORD": "Senha@155"
 }
